@@ -1,0 +1,104 @@
+
+//-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-//
+// I want to compare the mixed showers to those generated by   //
+// Geant4 in order to check whether the 'mixing' method I have //
+// come up with is good enough.                                //
+//-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-//
+
+#include "myHist.C"
+
+int m_nEvent = 100;
+
+TString savedir = "../plots/MixComparison/";
+
+//----------------------------------------//
+// Main
+//----------------------------------------//
+void MakeProfile()
+{
+
+  // Specify the file
+  TFile* file = new TFile("../output/mixedShower_Eprim40_ToBeMixed1000_scale1e+06_nEvents10.root");
+  
+  // Specify the number of events 
+  int nEvt = 9;
+
+  // Load histogram to get binning
+  TH1F* temp = (TH1F*) file->Get("h_evt0");
+  int nbins = temp->GetNbinsX();
+  float xmin = temp->GetXaxis()->GetXmin();
+  float xmax = temp->GetXaxis()->GetXmax()/100.;
+  temp = NULL;
+  delete temp;
+
+  // Make canvas
+  TCanvas* c=makeCanvas("c");
+  c->SetLogy();
+
+  // Now get profile
+  TProfile* prof = getMixProfile(file,nbins,xmin,xmax,
+				 kBlack,20, nEvt);
+
+  prof->GetXaxis()->SetTitle("z [m]");
+  //prof->GetYaxis()->SetTitle("N(e^{-}+e^{+})/N(e^{-}_{inc})");
+  prof->GetYaxis()->SetTitle("N(e^{-}+e^{+})");
+  //prof->GetXaxis()->SetRange(0,100);
+  prof->Draw();
+  prof->SetStats(0);
+  prof->SetName("prof");
+
+  // Save the result in png
+  //c->SaveAs("../plots/ELSStudy/MixedProfile_percent.png");
+  c->SaveAs("../plots/ELSStudy/MixedProfile.png");
+
+  // Save the ouput for Dim3 analysis
+  //TFile* output = new TFile("ELS_ShowerProfile.root","recreate");
+  //prof->Write();
+  //output->Write();
+  //output->Close();
+  //delete output;
+
+}
+//----------------------------------------//
+// Get profile from all events mixed
+//----------------------------------------//
+TProfile* getMixProfile(TFile* file, int nbins,
+			float xmin, float xmax,
+			int color, int marker,
+			int nEvts)
+{
+
+  // Histograms all have same base name
+  string base = "h_evt";
+  
+  // String stream easy for manipulation
+  stringstream ss;
+  
+  // Create Profile
+  TProfile* p = new TProfile("mixed","",nbins,xmin,xmax);
+  p->SetMarkerSize(0.75);
+  p->SetMarkerStyle(marker);
+  p->SetMarkerColor(color);
+  p->SetLineColor(color);
+
+  // Now loop over events and get result
+  TH1F* h = NULL;
+  for(int i=0; i<nEvts; ++i){
+    ss.str("");
+    ss << base << i;
+    h = (TH1F*) file->Get(ss.str().c_str());
+
+    // Loop over bin content
+    for(int bin=1; bin<=h->GetNbinsX(); ++bin){
+      float content = h->GetBinContent(bin);
+      float center  = h->GetBinCenter(bin)/100.;
+      p->Fill(center, content);
+    }
+    
+    h = NULL;
+
+  }// end loop events
+
+  return p;
+
+}
