@@ -6,29 +6,32 @@ using namespace std;
 //------------------------------------------------//
 // Constructor
 //------------------------------------------------//
-Mixer::Mixer(float Eprimary, float Edesired,
+Mixer::Mixer(float Eprimary, 
+	     int nPartPerEvent,
 	     int nToBeMixed, 
-	     int totEvents, int finalEvents,
+	     int totEvents, 
+	     int finalEvents,
 	     string inname) :
   m_output(NULL),
-  m_fRead(NULL),
+  m_chain(NULL),
   m_rand(NULL),
   m_tobemixed(nToBeMixed),
   m_totEvents(totEvents),
   m_finalEvents(finalEvents),
-  m_scale(0.),
-  m_nbins(40),
+  m_scale(nPartPerEvent),
+  m_nbins(1.),
   m_xmin(0.),
-  m_xmax(20.),
-  m_X0(38.9)
+  m_xmax(200.),
+  m_step(0.5)
 {
-
+  
   // Build output file name
   stringstream ss;
   ss << getenv("PWD");
   ss << "/../output/mixedShower_Eprim" 
      << Eprimary
      << "_ToBeMixed" << m_tobemixed
+     << "_scale" << m_scale
      << "_nEvents" << finalEvents
      << ".root";
   
@@ -36,24 +39,30 @@ Mixer::Mixer(float Eprimary, float Edesired,
   m_output = new TFile(ss.str().c_str(),"recreate");
 
   // Build file reader
-  m_fRead  = new FileReader(inname);
+  m_chain  = new TChain("trkTree");
+  m_chain->Add(inname.c_str());
+
+  // Set event address
+  m_event  = new Event();
+  m_chain->SetBranchAddress("event", &m_event);
 
   // Create the random object
   m_rand   = new TRandom3();
 
-  // Set the scale factor to use for each event.
-  // scale = (Edesired) / (Eprimary * nToBeMixed)
-  //m_scale = Edesired/(Eprimary * nToBeMixed);
-  m_scale = 1; 
+  // Step size is when to count the particles.
+  // In this case it is the m_xmax / nbins
+  m_nbins = m_xmax / m_step;
 
   // Print some beginning info
   cout<<endl;
   cout<<"************************************************"<<endl;
-  cout<<" Eprimary     = "<<Eprimary<<endl;
-  cout<<" Edesired     = "<<Edesired<<endl;
-  cout<<" nToBeMixed   = "<<nToBeMixed<<endl;
-  cout<<" totEvents    = "<<totEvents<<endl;
-  cout<<" nFinalEvents = "<<finalEvents<<endl;
+  cout<<" Eprimary         = "<<Eprimary<<endl;
+  cout<<" nToBeMixed       = "<<nToBeMixed<<endl;
+  cout<<" scale            = "<<m_scale<<endl;
+  cout<<" totEvents        = "<<totEvents<<endl;
+  cout<<" nFinalEvents     = "<<finalEvents<<endl;
+  cout<<" Mimicing "<<m_scale*nToBeMixed<<" particles"; 
+  cout<<" with primary energy: "<<Eprimary<<" MeV"<<endl;
   cout<<"************************************************"<<endl;
   cout<<endl;
 
@@ -71,12 +80,13 @@ Mixer::~Mixer()
   delete m_output;
 
   // Delete objects
-  delete m_fRead;
+  delete m_chain;
+  delete m_event;
   delete m_rand;
 
   // Loop over and kill any remaining particles
-  for(uint i=0; i<m_parts.size(); ++i)
-    delete m_parts.at(i);
+  //for(uint i=0; i<m_parts.size(); ++i)
+  //  delete m_parts.at(i);
   m_parts.clear();
 
 }
@@ -95,6 +105,8 @@ void Mixer::generateEvents()
 
   // Loop over the number of events to be generated
   for(int iEvt=0; iEvt<m_finalEvents; ++iEvt){
+    if(iEvt % 10 == 0)
+      cout<<"Working on "<<iEvt<<endl;
 
     // Specify output name
     pname.str("");
@@ -127,8 +139,8 @@ TH1D* Mixer::generateEvent(int evtNum)
 {
 
   // Load the particles for a given event
-  m_fRead->setRandom(evtNum);
-  m_fRead->setParticles(m_parts);
+  m_chain->GetEntry(evtNum);
+  m_parts = m_event->getParticles();
   
   // Create temporary histogram
   TH1D* h_temp = new TH1D("h_temp","",m_nbins,m_xmin,m_xmax);
@@ -136,21 +148,32 @@ TH1D* Mixer::generateEvent(int evtNum)
   // Loop over particles
   //cout<<"Number of Particles: "<<m_parts.size()<<" Event: "<<evtNum<<endl;
   for(uint i=0; i<m_parts.size(); ++i){
-    Particle* p = m_parts.at(i);
-  
+    Particle* p = &m_parts.at(i);
+
+    // Only count electrons
+    int pdg = p->pdg();
+    if( abs(pdg) != 11 ) continue;
+
     // TODO: Make the bin width variable
     // this should be easy to do!!
     //cout<<"\tStart: "<<p->ZI()<<" last: "<<p->ZF()<<endl;
-    int lowbin  = (int) (p->ZI()/0.5);
-    int highbin = (int) (p->ZF()/0.5);
+    int lowbin  = h_temp->GetXaxis()->FindBin(p->ZI());
+    int highbin = h_temp->GetXaxis()->FindBin(p->ZF());
     
+    //p->print();
+    //cout<<"Particle: "<<i<<endl;
+    //cout<<"lowbin: "<<lowbin<<" highbin: "<<highbin<<endl;
+
     // If in same bin, do nothing
     if(lowbin == highbin) continue;
-    p->print();
+    if(highbin > m_nbins) highbin = m_nbins;
+
     // Loop from low to high
-    for(int bin=lowbin; bin<highbin; ++bin)
-      h_temp->Fill(bin*0.5, m_scale);
-    
+    int sign_pdg = pdg > 0 ? 1 : -1;
+    for(int bin=lowbin; bin<highbin; ++bin){
+      float bc = h_temp->GetBinCenter(bin);
+      h_temp->Fill(bc, sign_pdg * m_scale);
+    }
   }// end loop over particles
   
   return h_temp;
